fix: Change default link color not visible in dark mode

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -12,7 +12,7 @@ $border-dark: $gray-800;
 $body-color-dark: $gray-300;
 $dots-dark: darken($body-color-dark, 50%);
 
-$link-color-dark: $primary;
+$link-color-dark: $blue-300;
 $button-color-dark: $link-color-dark;
 $focus-color-dark: lighten($link-color-dark, 2.5%);
 
@@ -38,6 +38,10 @@ $navbar-dark-active-color:          $link-color-dark;
 [data-dark-mode] body .btn-primary {
   @include button-variant($button-color-dark, $button-color-dark);
 
+  color: $body-bg-dark !important;
+}
+
+[data-dark-mode] body .btn-info {
   color: $body-bg-dark !important;
 }
 
